Primeira versão Somos Solução

--- a/www/index.html
+++ b/www/index.html
@@ -410,14 +410,31 @@
 
         <!-- Inicio DIV somos a solução -->
 
-        <div id="we-solution">
+        <div id="we-solution-page">
+            <div id="we-solution-left">
+                <img id="first-first-img-solution" src="img\solution-photo1.jpg" alt="">
+                <img id="first-red-solution" src="img\solution-redbox.jpg" alt="">
+                <img id="first-second-img-solution" src="img\solution-photo1.jpg" alt="">
+                <img id="second-first-img-solution" src="img\solution-photo1.jpg" alt="">
+                <img id="second-third-img-solution" src="img\solution-photo1.jpg" alt="">
+                <img id="third-red-solution" src="img\solution-redbox.jpg" alt="">
+                <img id="third-second-img-solution" src="img\solution-photo1.jpg" alt="">
+                <img id="fourth-first-img-solution" src="img\solution-photo1.jpg" alt="">
+                <img id="last-red-solution" src="img\solution-redbox.jpg" alt="">
+            </div>
+            <div id="we-solution-right">
+                <img id="first-first-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="first-red-solution-right" src="img\solution-redbox.jpg" alt="">
+                <img id="first-second-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="second-first-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="second-third-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="third-red-solution-right" src="img\solution-redbox.jpg" alt="">
+                <img id="third-second-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="fourth-first-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="last-red-solution-right" src="img\solution-redbox.jpg" alt="">
+            </div>
 
-
-
-
-
-
-        </div>
+    </div>
 
 
         <!-- Fim DIV somos a solução -->
