Final things on clients div

--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -413,7 +413,7 @@
         <!--Início de Div "Mais de 500 clientes que confiam em nós"-->
         <div id="div_trusted_clients">
             <div id="clients_text">
-                <p>Mais de 500 clientes que confiam em nós<svg id="dot_point_clients" width="6" height="6"
+                <p>Mais de 500 clientes que <br id="breakline_phone"> confiam em nós<svg id="dot_point_clients" width="6" height="6"
                         viewBox="0 0 6 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="3" cy="3" r="3" fill="#ED1C23" />
                     </svg>
