Finalizada página somos a solução

--- a/www/index.html
+++ b/www/index.html
@@ -414,24 +414,37 @@
             <div id="we-solution-left">
                 <img id="first-first-img-solution" src="img\solution-photo1.jpg" alt="">
                 <img id="first-red-solution" src="img\solution-redbox.jpg" alt="">
-                <img id="first-second-img-solution" src="img\solution-photo1.jpg" alt="">
-                <img id="second-first-img-solution" src="img\solution-photo1.jpg" alt="">
-                <img id="second-third-img-solution" src="img\solution-photo1.jpg" alt="">
-                <img id="third-red-solution" src="img\solution-redbox.jpg" alt="">
-                <img id="third-second-img-solution" src="img\solution-photo1.jpg" alt="">
-                <img id="fourth-first-img-solution" src="img\solution-photo1.jpg" alt="">
-                <img id="last-red-solution" src="img\solution-redbox.jpg" alt="">
+                <img id="first-second-img-solution" src="img\solution-photo2.jpg" alt="">
+                <img id="second-first-img-solution" src="img\solution-photo3.jpg" alt="">
+                <img id="second-third-img-solution" src="img\solution-photo4.jpg" alt="">
+                <img class="remove-mobile" id="third-red-solution" src="img\solution-redbox.jpg" alt="">
+                <img class="remove-mobile" id="third-second-img-solution" src="img\solution-photo5.jpg" alt="">
+                <img class="remove-mobile" id="fourth-first-img-solution" src="img\solution-photo6.jpg" alt="">
+                <img class="remove-mobile" id="last-red-solution" src="img\solution-redbox.jpg" alt="">
             </div>
             <div id="we-solution-right">
-                <img id="first-first-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="first-first-img-solution-right" src="img\solution-photo5.jpg" alt="">
                 <img id="first-red-solution-right" src="img\solution-redbox.jpg" alt="">
-                <img id="first-second-img-solution-right" src="img\solution-photo1.jpg" alt="">
-                <img id="second-first-img-solution-right" src="img\solution-photo1.jpg" alt="">
-                <img id="second-third-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="first-second-img-solution-right" src="img\solution-photo6.jpg" alt="">
+                <img id="second-first-img-solution-right" src="img\solution-photo2.jpg" alt="">
+                <img id="second-third-img-solution-right" src="img\solution-photo4.jpg" alt="">
                 <img id="third-red-solution-right" src="img\solution-redbox.jpg" alt="">
-                <img id="third-second-img-solution-right" src="img\solution-photo1.jpg" alt="">
+                <img id="third-second-img-solution-right" src="img\solution-photo3.jpg" alt="">
                 <img id="fourth-first-img-solution-right" src="img\solution-photo1.jpg" alt="">
                 <img id="last-red-solution-right" src="img\solution-redbox.jpg" alt="">
+            </div>
+            <div id='we-solution-text'>
+                <p id="culture-title">Somos a solução.</p>
+                <p id="culture-subtitle">Para dispormos de equipas altamente
+                    motivadas e disponíveis para dar
+                   o melhor de si, adotamos as melhores
+                   práticas de gestão de recursos humanos
+                   praticadas no mercado.</p>
+                <button id="our-culture">
+                    A nossa cultura
+                </button>
+
+
             </div>
 
     </div>
