inicio contact-us

--- a/www/index.html
+++ b/www/index.html
@@ -443,8 +443,6 @@
                 <button id="our-culture">
                     A nossa cultura
                 </button>
-
-
             </div>
 
         </div>
@@ -573,6 +571,41 @@
         </div>
 
         <!--Fim de Div "Mais de 500 clientes que confiam em nós"-->
+
+
+        <!-- Inicio DIV Contacte-nos -->
+         <div id="contact-us">
+            <div id="contact-us-text">
+
+
+
+            </div>
+
+            <div id="contact-us-form">
+                <form id="contact-us-post-form">
+                    <input class="input-contact" type="text" id="contact-us-name" placeholder="Nome *" required><br><br>
+                    <input class="input-contact" type="email" id="contact-us-email" placeholder="E-mail *" required><br><br>
+                    <input class="input-contact" type="tel" id="contact-us-phone" placeholder="Telefone *" required><br><br>
+                    <input class="input-contact" type="text" id="contact-us-reason" placeholder="Assunto *" required><br><br>
+                    <input class="input-contact" type="text" id="contact-us-text" placeholder="Mensagem *" required><br><br>
+                    <div id="terms-conditions">
+                        <input type="checkbox" name="checkbox" value="check" id="agree" /> 
+                        <p>Após ler a política de privacidade, autorizo ​​o processamento dos meus dados pessoais para os fins especificados. Pode consultar informações adicionais e detalhadas sobre proteção de dados na Política de Privacidade.</p>
+                       <br>
+                    </div>
+                    <input type="submit" value="Enviar">
+                   
+
+                </form>
+
+
+
+            </div>
+
+
+
+         </div>
+         <!-- Fim DIV Contacte-nos -->
 
         <!-- Footer -->
         <div class="footer">
