--- a/www/index.html
+++ b/www/index.html
@@ -585,15 +585,15 @@
                 <form id="contact-us-post-form">
                     <input class="input-contact" type="text" id="contact-us-name" placeholder="Nome *" required><br><br>
                     <input class="input-contact" type="email" id="contact-us-email" placeholder="E-mail *" required><br><br>
-                    <input class="input-contact" type="tel" id="contact-us-phone" placeholder="Telefone *" required><br><br>
+                    <input class="input-contact" type="number" id="contact-us-phone" placeholder="Telefone *" required><br><br>
                     <input class="input-contact" type="text" id="contact-us-reason" placeholder="Assunto *" required><br><br>
-                    <input class="input-contact" type="text" id="contact-us-text" placeholder="Mensagem *" required><br><br>
+                    <input class="input-contact input-message" type="text" id="contact-us-text" placeholder="Mensagem" required><br><br>
                     <div id="terms-conditions">
-                        <input type="checkbox" name="checkbox" value="check" id="agree" /> 
+                        <input type="checkbox" name="checkbox" value="check" id="agree" required /> 
                         <p>Após ler a política de privacidade, autorizo ​​o processamento dos meus dados pessoais para os fins especificados. Pode consultar informações adicionais e detalhadas sobre proteção de dados na Política de Privacidade.</p>
                        <br>
                     </div>
-                    <input type="submit" value="Enviar">
+                    <input id="submit-button-contact" type="submit" value="Enviar">
                    
 
                 </form>
