--- a/www/index.html
+++ b/www/index.html
@@ -131,7 +131,7 @@
         </p>
 
         <p id="title-2">
-            Lorem Ipsum
+            Solução Construção
         </p>
 
         <p id="title-3">
