--- a/www/index.html
+++ b/www/index.html
@@ -127,6 +127,8 @@
 
     <div class="content">
 
+        <div id="content-first-page">
+
         <p id="title-1">
             Lorem ipsum
         </p>
@@ -206,8 +208,8 @@
             </button>
 
         </div>
-
-        <hr id="first-hr">
+    </div>
+    <hr id="first-hr">
         <div id="different_sectors">
             <div id="auxDiv"></div>
             <div id="especialists_text">
