Alterações no nav

--- a/www/index.html
+++ b/www/index.html
@@ -68,26 +68,52 @@
             <div class="menu">
                 <ul id="list-menu">
                     <li>
-                        <div class="dropdown">
+                        <div class="dropdown" id="sectors-dropdown">
                             <a href="#" id="sectors-btn" class="dropbtn">Setores <svg width="11" height="7"
                                     viewBox="0 0 7 4" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 0.75L3.5 3.25L6 0.75" stroke="white" stroke-opacity="0.74"
                                         stroke-width="0.8" />
                                 </svg>
                             </a>
-                            <div class="dropdown-content">
-                                <a href="#">Construção</a>
-                                <a href="#">Distribuição</a>
-                                <a href="#">Indústria</a>
-                                <a href="#">TI</a>
+                            <div class="dropdown-content" id="dropdown-sectors">
+                                <a id="first-dropdown-option-1" href="#">Construção</a>
+                                <a id="first-dropdown-option-2" href="#">Distribuição</a>
+                                <a id="first-dropdown-option-3" href="#">Indústria</a>
+                                <a id="first-dropdown-option-4" href="#">TI</a>
                             </div>
                         </div>
                     </li>
-                    <li><a href="#" class="dropbtn">A nossa Equipa
+                    <hr class="hamburguer-hr">
+                    <li><a href="#" class="dropbtn" id="our-team">A nossa Equipa
                         </a></li>
-                    <li><a href="#" class="dropbtn">Blog</a></li>
-                    <li><a href="#" class="dropbtn">Contactos</a></li>
+                        <hr class="hamburguer-hr">
+                    <li><a href="#" class="dropbtn" id="our-blog">Blog</a></li>
+                    <hr class="hamburguer-hr">
+                    <li><a href="#" class="dropbtn" id="our-contacts">Contactos</a></li>
+                    <div class="social-media-hamburguer">
+                        <div id="hamburguer-icons-text">
+                            <p>Encontra-nos nas redes sociais</p>
+                        </div>
+                        <div id="hamburguer-icons">
+                        <svg width="50" height="50" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 30C0 13.4315 13.4315 0 30 0C46.5685 0 60 13.4315 60 30C60 46.5685 46.5685 60 30 60C13.4315 60 0 46.5685 0 30Z" fill="#212121"/>
+                            <path d="M36.9809 31.875L37.8141 26.4457H32.6045V22.9225C32.6045 21.4371 33.3323 19.9893 35.6655 19.9893H38.0338V15.3668C38.0338 15.3668 35.8846 15 33.8297 15C29.5395 15 26.7352 17.6004 26.7352 22.3078V26.4457H21.9662V31.875H26.7352V45H32.6045V31.875H36.9809Z" fill="#F5F5F5"/>
+                            </svg>
+                        <svg width="50" height="50" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 30C0 13.4315 13.4315 0 30 0C46.5685 0 60 13.4315 60 30C60 46.5685 46.5685 60 30 60C13.4315 60 0 46.5685 0 30Z" fill="#212121"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M30.1265 14C25.7811 14 25.2358 14.019 23.5291 14.0967C21.8257 14.1747 20.6631 14.4443 19.6457 14.84C18.5934 15.2487 17.7007 15.7954 16.8114 16.685C15.9214 17.5744 15.3747 18.467 14.9647 19.5191C14.568 20.5367 14.298 21.6997 14.2213 23.4024C14.145 25.1091 14.125 25.6548 14.125 30.0002C14.125 34.3455 14.1443 34.8892 14.2217 36.5959C14.3 38.2993 14.5697 39.4619 14.965 40.4793C15.374 41.5316 15.9207 42.4243 16.8104 43.3136C17.6994 44.2036 18.592 44.7517 19.6437 45.1603C20.6617 45.556 21.8247 45.8257 23.5278 45.9037C25.2344 45.9813 25.7795 46.0003 30.1245 46.0003C34.4702 46.0003 35.0139 45.9813 36.7206 45.9037C38.4239 45.8257 39.5879 45.556 40.6059 45.1603C41.658 44.7517 42.5493 44.2036 43.4383 43.3136C44.3283 42.4243 44.875 41.5316 45.285 40.4796C45.6783 39.4619 45.9483 38.2989 46.0283 36.5962C46.105 34.8896 46.125 34.3455 46.125 30.0002C46.125 25.6548 46.105 25.1094 46.0283 23.4028C45.9483 21.6994 45.6783 20.5367 45.285 19.5194C44.875 18.467 44.3283 17.5744 43.4383 16.685C42.5483 15.795 41.6583 15.2483 40.6049 14.84C39.5849 14.4443 38.4216 14.1747 36.7182 14.0967C35.0115 14.019 34.4682 14 30.1215 14H30.1265ZM28.6911 16.8833C29.1171 16.8827 29.5924 16.8833 30.1264 16.8833C34.3985 16.8833 34.9048 16.8987 36.5918 16.9753C38.1518 17.0467 38.9985 17.3073 39.5625 17.5263C40.3092 17.8163 40.8415 18.163 41.4012 18.723C41.9612 19.283 42.3079 19.8163 42.5986 20.563C42.8176 21.1264 43.0786 21.973 43.1496 23.5331C43.2262 25.2197 43.2429 25.7264 43.2429 29.9965C43.2429 34.2665 43.2262 34.7732 43.1496 36.4599C43.0782 38.0199 42.8176 38.8666 42.5986 39.4299C42.3086 40.1766 41.9612 40.7082 41.4012 41.2679C40.8412 41.8279 40.3095 42.1746 39.5625 42.4646C38.9992 42.6846 38.1518 42.9446 36.5918 43.0159C34.9051 43.0926 34.3985 43.1093 30.1264 43.1093C25.8541 43.1093 25.3477 43.0926 23.661 43.0159C22.101 42.9439 21.2543 42.6833 20.69 42.4643C19.9433 42.1742 19.41 41.8276 18.85 41.2676C18.29 40.7076 17.9433 40.1756 17.6526 39.4286C17.4336 38.8652 17.1726 38.0185 17.1016 36.4585C17.025 34.7718 17.0096 34.2652 17.0096 29.9925C17.0096 25.7197 17.025 25.2157 17.1016 23.5291C17.173 21.969 17.4336 21.1224 17.6526 20.5584C17.9426 19.8117 18.29 19.2783 18.85 18.7183C19.41 18.1583 19.9433 17.8117 20.69 17.521C21.254 17.301 22.101 17.041 23.661 16.9693C25.137 16.9027 25.7091 16.8827 28.6911 16.8793V16.8833ZM38.6672 19.54C37.6072 19.54 36.7472 20.399 36.7472 21.4594C36.7472 22.5194 37.6072 23.3794 38.6672 23.3794C39.7272 23.3794 40.5872 22.5194 40.5872 21.4594C40.5872 20.3994 39.7272 19.54 38.6672 19.54ZM30.1265 21.7834C25.5888 21.7834 21.9098 25.4624 21.9098 30.0001C21.9098 34.5378 25.5888 38.2152 30.1265 38.2152C34.6642 38.2152 38.3419 34.5378 38.3419 30.0001C38.3419 25.4624 34.6642 21.7834 30.1265 21.7834ZM30.1265 24.6667C33.0718 24.6667 35.4599 27.0544 35.4599 30.0001C35.4599 32.9455 33.0718 35.3335 30.1265 35.3335C27.1808 35.3335 24.7931 32.9455 24.7931 30.0001C24.7931 27.0544 27.1808 24.6667 30.1265 24.6667Z" fill="#F5F5F5"/>
+                            </svg>
+                            
+                            <svg width="50" height="50" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 30C0 13.4315 13.4315 0 30 0C46.5685 0 60 13.4315 60 30C60 46.5685 46.5685 60 30 60C13.4315 60 0 46.5685 0 30Z" fill="#212121"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M29.1015 24.3844L29.1645 25.4224L28.1152 25.2953C24.2961 24.8081 20.9596 23.1556 18.1267 20.3804L16.7417 19.0034L16.385 20.0203C15.6295 22.2871 16.1122 24.681 17.686 26.291C18.5254 27.1808 18.3365 27.3079 16.8886 26.7783C16.385 26.6088 15.9443 26.4817 15.9023 26.5452C15.7554 26.6935 16.2591 28.6214 16.6578 29.384C17.2034 30.4433 18.3155 31.4814 19.5326 32.0957L20.5609 32.583L19.3438 32.6042C18.1686 32.6042 18.1267 32.6254 18.2526 33.0702C18.6723 34.4473 20.33 35.909 22.1767 36.5446L23.4777 36.9895L22.3445 37.6674C20.6658 38.6419 18.6933 39.1927 16.7207 39.2351C15.7764 39.2563 15 39.341 15 39.4046C15 39.6164 17.5601 40.8028 19.05 41.2689C23.5197 42.6459 28.8287 42.0527 32.8157 39.7012C35.6486 38.0275 38.4815 34.7015 39.8035 31.4814C40.517 29.7654 41.2305 26.63 41.2305 25.1259C41.2305 24.1513 41.2934 24.0242 42.4686 22.8591C43.161 22.1811 43.8116 21.4397 43.9375 21.2278C44.1473 20.8253 44.1263 20.8253 43.0561 21.1854C41.2724 21.821 41.0206 21.7362 41.902 20.7829C42.5525 20.105 43.3289 18.8763 43.3289 18.5161C43.3289 18.4526 43.0141 18.5585 42.6574 18.7492C42.2797 18.961 41.4403 19.2788 40.8108 19.4694L39.6776 19.8296L38.6494 19.1305C38.0828 18.7492 37.2854 18.3255 36.8657 18.1983C35.7955 17.9017 34.1587 17.9441 33.1935 18.2831C30.5704 19.2364 28.9126 21.6939 29.1015 24.3844Z" fill="#F5F5F5"/>
+                                </svg>
+                                
+                    </div>
+                    </div>
                 </ul>
+
+
             </div>
             <div id="nav-social-language">
                 <div class="social-media">
@@ -118,13 +144,13 @@
                     </svg>
                 </div>
                 <div class="dropdown">
-                    <a href="#" id="language-btn" class="dropbtn">PT<svg width="11" height="7"
+                    <a href="#" id="language-btn" class="dropbtn">PT <svg width="11" height="7"
                             viewBox="0 0 7 4" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 0.75L3.5 3.25L6 0.75" stroke="white" stroke-opacity="0.74"
                                 stroke-width="0.8" />
                         </svg>
                     </a>
-                    <div class="dropdown-content">
+                    <div class="dropdown-content" id="dropdown-language">
                         <a href="/en">EN</a>
                         <a href="/fr">FR</a>
                         <a href="/es">ES</a>
@@ -137,6 +163,10 @@
     <!--Imagem de fundo -- Posteriormente alterar para vídeo -->
 
     <img id="video-banner" src="img\backgroud.png" alt="">
+
+    <svg id="close-hamburguer" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M11 1L1 11M1 1L11 11" stroke="#212121" stroke-width="1.7" stroke-linecap="round"/>
+        </svg>        
 
 
     <!-- Conteúdo 1ª Àrea site-->
