--- a/www/index.html
+++ b/www/index.html
@@ -151,8 +151,11 @@
                         </svg>
                     </a>
                     <div class="dropdown-content" id="dropdown-language">
+                        <hr class="language-hr">
                         <a href="/en">EN</a>
+                        <hr class="language-hr">
                         <a href="/fr">FR</a>
+                        <hr class="language-hr">
                         <a href="/es">ES</a>
                     </div>
             </div>
