Adicionado DIV construção

--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
                                 </svg>
                             </a>
                             <div class="dropdown-content" id="dropdown-sectors">
-                                <a id="first-dropdown-option-1" href="#">Construção</a>
+                                <a id="first-dropdown-option-1" href="#" onclick="ConstructionLoad()">Construção</a>
                                 <a id="first-dropdown-option-2" href="#">Distribuição</a>
                                 <a id="first-dropdown-option-3" href="#">Indústria</a>
                                 <a id="first-dropdown-option-4" href="#">TI</a>
@@ -293,12 +293,14 @@
         </div>
 
         <div id="more-info">
-            <button id="more-info-button">
+            <button id="more-info-button" class="more-info-button-homepage">
                 Saber mais
             </button>
         </div>
     </div>
 
+
+    <!-- Conteúdo ÁREA CONTACTOS-->
 
     <div id="section-contact-us">
         <div id="content-contact-us">
@@ -307,7 +309,7 @@
             </p>
 
             <p id="title-2">
-                CONTACTE-NOS
+                Contacta-nos
             </p>
 
             <p id="title-3">
@@ -316,8 +318,37 @@
             </p>
 
             <div id="more-info">
-                <button id="more-info-button">
+                <button id="more-info-button-contact-us" class="more-info-button-homepage">
                     Saber mais
+                </button>
+            </div>
+        </div>
+        <div id="contact-us-office-info">
+          <!-- ADICIONAR ESCRITÓRIOS -->
+
+        </div>
+    </div>
+
+    <!-- SECÇÃO CONSTRUÇÃO -->
+
+    <div id="section-construction-homepage">
+        <div id="content-contact-us">
+            <p id="title-1">
+                Solução para Construção civil
+            </p>
+
+            <p id="title-2">
+                Lorem ipsum
+            </p>
+
+            <p id="title-3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus tellus eget sollicitudin enim rutrum viverra
+                sit.
+            </p>
+
+            <div id="more-info">
+                <button id="construction-info-button" class="more-info-button-homepage">
+                    Fale Connosco
                 </button>
             </div>
         </div>
